Changes for new settings - not complete Manifest changes to aloow starting CustomSettings as activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1305,6 +1305,21 @@
                 android:resource="@id/sync_settings" />
         </activity>
 
+        <activity android:name="Settings$CustomSettingsActivity"
+            android:label="Custom Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.settings.CUSTOM_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.CustomSettings" />
+            <meta-data android:name="com.android.settings.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/custom_settings" />
+        </activity>
+
+
+
         <activity android:name="com.android.settings.accounts.AddAccountSettings"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="orientation|keyboardHidden|screenSize"
