--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:taskAffinity=""
             android:theme="@android:style/Theme.Holo"
             android:uiOptions="splitActionBarWhenNarrow"
-            android:hardwareAccelerated="false">
+            android:hardwareAccelerated="true">
 
         <!-- Settings -->
 
@@ -1305,17 +1305,6 @@
                 android:resource="@id/sync_settings" />
         </activity>
 
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <!-- TranquilIce Custom Settings -->
-        
         <activity android:name="Settings$CustomSettingsActivity"
             android:label="Custom Settings">
             <intent-filter>
@@ -1329,7 +1318,6 @@
                 android:resource="@id/custom_settings" />
         </activity>
 
-
         <activity android:name="com.android.settings.accounts.AddAccountSettings"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -1340,6 +1328,48 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+	<activity android:name="Tranquility"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="Tranquility Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+	<activity android:name="NavBar"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="Navigation Bar Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="Lockscreen"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="Lockscreen Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="Meters"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="Battery  Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
 
         <activity android:name="com.android.settings.accounts.ChooseAccountActivity"
             android:label="@string/header_add_an_account"
@@ -1416,9 +1446,12 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info" />
         </receiver>
-
+	
    		<activity android:name=".About" android:label="Change Log"
-		    android:screenOrientation="portrait" />	  
+		    android:screenOrientation="portrait" />
+
+   		<activity android:name=".Lockscreen" android:label="Lockscreen Settings"
+		    android:screenOrientation="portrait" />
 
     </application>
 </manifest>
