--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1315,108 +1315,7 @@
                 android:resource="@id/custom_settings" />
         </activity>
 
-	<!-- Quick Setting Items-->   
-        <activity android:name="Settings$LockscreenActivity"
-            android:label="Custom Lockscreen">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.LOCKSCREEN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.Lockscreen" />
-        </activity>
-	
-        <activity android:name="Settings$ClockActivity"
-            android:label="Custom Clock">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.CLOCK" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomStatusbarSettings" />
-        </activity>
-
-        <activity android:name="Settings$MeterActivity"
-            android:label="Custom Meter">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.METERS" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.Meters" />
-        </activity>
-
-        <activity android:name="Settings$NavigationActivity"
-            android:label="Custom Navigation">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.NAVBAR" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.NavBar" />
-        </activity>
-
-        <activity android:name="Settings$ToggleActivity"
-            android:label="Custom Toggles">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.TOGGLES" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomToggleSettings" />
-        </activity>
-
-        <activity android:name="Settings$PulldownActivity"
-            android:label="Custom Pulldown">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.PULLDOWN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomPulldownSettings" />
-        </activity>
-
-        <activity android:name="Settings$IconColorActivity"
-            android:label="Custom Icon Coloring">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.ICONCOLOR" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomIconSettings" />
-        </activity>
-
-        <activity android:name="Settings$LedActivity"
-            android:label="Custom Led">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.LED" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomLedSettings" />
-        </activity>
-
-        <activity android:name="Settings$QuietTimeActivity"
-            android:label="Custom Quiet Time">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.QUIETTIME" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomQuietSettings" />
-        </activity>
-
-<!-- End Quick Settings -->
 
         <activity android:name="com.android.settings.accounts.AddAccountSettings"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
@@ -1430,10 +1329,10 @@
         </activity>
 
 
-	<activity android:name="Tranquility"
+	<activity android:name="CustomJunk"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="Tranquility Settings">
+            android:label="Customize Junk">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
