Lots of changes for Junk Rom

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1302,15 +1302,15 @@
                 android:resource="@id/sync_settings" />
         </activity>
 
-        <activity android:name="Settings$CustomSettingsActivity"
-            android:label="Custom Settings">
+        <activity android:name="Settings$CustomJunkSettingsActivity"
+            android:label="Custom Junk Settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.settings.CUSTOM_SETTINGS" />
+                <action android:name="android.settings.CUSTOM_JUNK_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.CustomSettings" />
+                android:value="com.android.settings.CustomJunk" />
             <meta-data android:name="com.android.settings.TOP_LEVEL_HEADER_ID"
                 android:resource="@id/custom_settings" />
         </activity>
