Change: Replaced number pickers with seekbars
Change-Id: Ia3a85b317ec2ac67e581365792e4ca29bf88a268

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1414,7 +1414,7 @@
         </activity>	
         
         <activity android:name="Settings$CustomQuietTimeSettingsActivity"
-            android:label="Quiet Time Settinsg">
+            android:label="Quiet Time Settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.settings.CUSTOM_QUIETTIME_SETTINGS" />
